<resources>
    <string name="app_name">Mixed Sale</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_sales">Add Sales</string>
    <string name="ic_sales">ic_sales</string>
    <string name="mixed_sales">Mixed Sales</string>
    <string name="start_a_new_sale">Start a new sale</string>
    <string name="sales">Sales</string>
    <string name="product">Product</string>
    <string name="debt">Debt</string>
    <string name="statistics">Statistics</string>
    <string name="client">Client</string>
    <string name="pay">Pay</string>
    <string name="add">Add</string>
    <string name="products">Products</string>
    <string name="product_image">Product Image</string>
    <string name="product_test">Coca Cola</string>
    <string name="date_null">2999–12–31 12:00</string>
    <string name="price_test">C$12</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="all">All</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="selected">Selected</string>
</resources>